--- a/src/tmp-romfs/ROM/HTMLs/HackTV.html
+++ b/src/tmp-romfs/ROM/HTMLs/HackTV.html
@@ -6,7 +6,7 @@
 </head>
 <script>	
 th = pp()
-bgm = z_bgm[getValue(z_nv, 1)]
+bgm = z_bgm[gV(z_nv, 1)]
 head(th, 'medium', bgm, -1, 'Welcome to HackTV')
 function doMenu() {
 	d.ua.vu.value = d.ua.um[d.ua.um.selectedIndex].value
