--- a/src/tmp-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
@@ -3,6 +3,12 @@
 <display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://rom/JS/htv-header.js></script>
 <script src=file://rom/JS/NVRAM.js></script>
+<script>
+ref = history.previous
+if (ref == 'file://rom/HTMLs/Themes.html' || ref == 'file://rom/HTMLs/PhoneCallWaitThresh.html' || ref == 'file://rom/HTMLs/BGM.html') {
+	goHTV()
+}
+</script>
 </head>
 <script>
 th = pp();
