--- a/src/tmp-romfs/ROM/HTMLs/TechInfoInternal.html
+++ b/src/tmp-romfs/ROM/HTMLs/TechInfoInternal.html
@@ -75,6 +75,6 @@ head(th, 'medium', 'tymplingA', '', 'WebTV Technical Information')
 <table>
 <tr>
 <td width=600 align=right>
-<form action=client:gotoadvancedsetup>
+<form action='javascript:goHTV()'>
 <script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script>
 </form></font>
