--- a/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
@@ -47,4 +47,4 @@ Brought to you by the efforts of:<br>
 <table>
 <tr>
 <td width=600 align=right>
-<form action=client:gotoadvancedsetup><script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script></form></font>
+<form action='javascript:goHTV()'><script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script></form></font>
