--- a/src/level0-romfs/ROM/HTMLs/HackTV.html
+++ b/src/level0-romfs/ROM/HTMLs/HackTV.html
@@ -38,7 +38,7 @@ window.onload = doMenu;
 <li><a href=BGM.html onmouseover="setMsg('                            Choose from several available background music for the HackTV Homepage.')">BGM Settings</a>
 <li><a href=TechInfoInternal.html onmouseover="setMsg('                            This page allows you to view technical information about your box. Identify the build version, ssid, and other relevant information.')">Tech Info</a>
 <li><a href=HTMLv2.html onmouseover="setMsg('                            This page allows you to play with the HTML and Javascript features of this build by offering a sandbox to play in.')">HTML Sandbox v2</a>
-<li><a href=client:showautodisk onmouseover="setMsg('                            Click here to attempt to re-trigger AutoDisk to extract the Disk Data from ROM, helpful if you are missing pages or having trouble witrh HackTV assets.')">Show AutoDisk</a>
+<li><a href=client:showautodisk onmouseover="setMsg('                            Click here to attempt to re-trigger AutoDisk to extract the Disk Data from ROM, helpful if you are missing pages or having trouble loading HackTV assets.')">Show AutoDisk</a>
 <tr>
 <td>
 <spacer width=2 height=120 type=block>
@@ -68,8 +68,6 @@ as(th, '', 10, 256, 0, 1)
 <select name=um onchange=doMenu() width=272 onmouseover='urlInfo()'>
 <option value=file://rom/HTMLs/BuildInfo.html selected>file://rom/HTMLs/BuildInfo.html</option>
 <option value=file://rom/Cache/Music/index.html>file://rom/Cache/Music/index.html</option>
-<option value=file://Disk/Browser/DiskFlash/Cache/Music/Intro017.mod>MOD TEST - Intro017.mod</option>
-<option value=file://Disk/Browser/DiskFlash/Cache/Music/kraftytechy.rmf>RMF TEST - kraftytechy.rmf</option>
 <option value=file://rom/Cache/Audio/index.html>file://rom/Cache/Audio/index.html</option>
 <option value=file://rom/>file://rom/</option>
 <option value=client:>client:</option>
