add @SKCro to the credits

--- a/src/level0-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/level0-romfs/ROM/HTMLs/BuildInfo.html
@@ -32,13 +32,14 @@ head(th,'medium','FridayEvilArr',5,'About this HackTV build');
 <td>
 <td valign=top align=right><shadow>Credits:</shadow>
 <td width=10>
-<td valign=top height=190>
+<td valign=top height=180>
 Brought to you by the efforts of:<br>
 - eMac (rommy, rev engineering, much more)<br>
 - MattMan69 (themes, design, layout)<br>
 - zefie (coding, packing, distribution)<br>
 - Outa (rev engineering, hw discoveries)<br>
 - FairPlay137 (MAME development)<br>
+- SKCro (design, optimization)<br>
 - WebTV Discord (for the lulz)<br>
 <tr>
 <td height=4>
