--- a/src/level0-autodisk/Browser/DiskFlash/HTMLs/Connecting.html
+++ b/src/level0-autodisk/Browser/DiskFlash/HTMLs/Connecting.html
@@ -5,16 +5,16 @@
 </head>
 
 <body bgcolor="#000000" text="#449944">
-<bgsound SRC="file://Disk/Browser/DiskFlash/Cache/Music/DialingWebTV2.mid" LOOP>
+<bgsound SRC="file://rom/Cache/Music/DialingWebTV2.mid" LOOP>
 <center>
 	<br><br><br><br>
-	<img src="/Images/ConnectingTo.gif" ani="/Animations/ConnectingTo.cel">
+	<img src="file://rom/Images/ConnectingTo.gif" ani="file://rom/Animations/ConnectingTo.cel">
 	<br>
-	<img src="/Images/CityGlow.gif">
+	<img src="file://rom/Images/CityGlow.gif">
 	<br>
-	<img src="/Images/Spacer.gif" width=1 height=4>
+	<img src="file://rom/Images/Spacer.gif" width=1 height=4>
 	<br>
-	<img src="/Images/CityRoad.gif" ani="/Animations/CityRoad.cel">
+	<img src="file://rom/Images/CityRoad.gif" ani="file://rom/Animations/CityRoad.cel">
 </center>
 
 <br>
