--- a/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
+++ b/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
@@ -1,11 +1,10 @@
 <html>
 <head>
 <display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://ROM/JS/htv-header.js></script>
+<script src=file://rom/JS/htv-header.js></script>
 <script src=file://rom/JS/NVRAM.js></script>
-</head>
-<script>
-th = pp();
+<script>	
+th = pp()
 
 txt = "Preparing";
 r=Math.floor(Math.random() * 20)
