fix height of fart message

--- a/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
+++ b/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
@@ -27,7 +27,10 @@ head(th, "medium", 'loop2', -1, txt+' your update', true);
 
 				<p>This usually takes less than five minutes, depending on your disk or memory card.
 				
-				<script>if(txt != "Preparing"){d.write('<p><font size=-2><i>Congratulations, there is only a 1/20 chance of seeing this message!</i></font>')}</script>
+				<script>
+				if(txt != "Preparing"){d.write('<p><font size=-2><i>Congratulations, there is only a 1/20 chance of seeing this message!</i></font><spacer type=vertical size=135><br>')}
+				else{d.write('<spacer type=vertical size=165><br>')
+				</script>
 
 <spacer type=vertical size=165><br>
 <font color=d0d0d0>
