update htv.html to js function

--- a/src/tmp-romfs/ROM/HTMLs/htv.html
+++ b/src/tmp-romfs/ROM/HTMLs/htv.html
@@ -11,5 +11,5 @@ goHTV()
 </script>
 <center>
 <h1>Redirecting... Please wait.</h1>
-<a href=client:gotoadvancedsetup>Click here if you aren't automatically redirected.
+<a href='javascript:goHTV()'>Click here if you aren't automatically redirected.
 </table>
