--- a/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
@@ -5,8 +5,7 @@
 <script src=file://rom/JS/NVRAM.js></script>
 <script>
 ref = history.previous
-alert(ref)
-if (ref == 'file://rom/HTMLs/Themes.html' || ref == 'file://rom/HTMLs/PhoneCallWaitThresh.html' || ref == 'file://rom/HTMLs/BGM.html') {
+if (ref == 'file://rom/HTMLs/Themes.html' || ref == 'file://rom/HTMLs/PhoneCallWaitThresh.html' || ref == 'file://rom/HTMLs/BGM.html' || ref == 'file://rom/HTMLs/NVRAM.html') {
 	go(ref)
 }
 </script>
