more sacrifices must be made

--- a/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
@@ -7,7 +7,7 @@
 </head>
 <script>
 th = pp()
-head(th,'medium','FridayEvilArr',5,'About this HackTV build');
+head(th,'medium','loop1',5,'About this HackTV build');
 </script>
 
 <table>
