sacrifices must be made

--- a/src/level0-romfs/ROM/HTMLs/ConfigureBYOISP.html
+++ b/src/level0-romfs/ROM/HTMLs/ConfigureBYOISP.html
@@ -12,7 +12,7 @@ if (ref != 'file://rom/HTMLs/HackTV.html') {
 }
 
 th = pp();
-head(th, 'medium', 'seqJ', '', 'Use your own ISP');
+head(th, 'medium', 'snowy1', '', 'Use your own ISP');
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
