--- a/src/tmp-romfs/ROM/HTMLs/ConfigureBYOISP.html
+++ b/src/tmp-romfs/ROM/HTMLs/ConfigureBYOISP.html
@@ -1,94 +1,42 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline noreconnectalert>
+<html><head><display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://rom/JS/htv-header.js></script>
 <script src=file://rom/JS/NVRAM.js></script>
-</head>
-<script>
-th = pp();
-head(th, 'medium', 'seqJ', '', 'Use your own ISP');
+</head><script>
+th=pp();
+head(th,'medium','seqJ','','Use your own ISP');
 </script>
-<table cellspacing=0 cellpadding=0>
-<tr>
-<td colspan=4>
-<table cellspacing=0 cellpadding=0>
-<tr>
-<td abswidth=20>
-<td valign=center absheight=30>
-</table>
-<TR>
-<td abswidth=34>
-<td width=220 height=166 valign=top align=left>
-<table cellspacing=0 cellpadding=0>
-<tr>
+<table cellspacing=0 cellpadding=0><tr><td colspan=4>
+<table cellspacing=0 cellpadding=0><tr><td abswidth=20><td valign=center absheight=30></table>
+<tr><td abswidth=34><td width=220 height=166 valign=top align=left>
+<table cellspacing=0 cellpadding=0><tr>
 <td absheight=45 valign=top>
-<font size=-1>Check this box and fill in the blanks
-		 to use your own Internet service provider.
-<tr>
-<td absheight=38 valign=middle>
+<font size=-1>Check this box and fill in the blanks to use your own Internet service provider.
+<tr><td absheight=38 valign=middle>
 <font size=-1>Login name
-<tr>
-<td absheight=38 valign=middle>
+<tr><td absheight=38 valign=middle>
 <font size=-1>Password
-<tr>
-<td absheight=38 valign=middle>
+<tr><td absheight=38 valign=middle>
 <font size=-1>Primary modem number
-<tr>
-<td absheight=38 valign=middle>
+<tr><td absheight=38 valign=middle>
 <font size=-1>Backup modem number
 </table>
 <td width=20>
 <td width=185 valign=top align=left>
 <form action=client:ConfirmBYOISPSetup>
 <table cellspacing=0 cellpadding=0>
-<tr>
-<td absheight=45 valign=top colspan=3>
-	<table>
-		<tr>
-			<td valign=top>
-				<input type=hidden name=BYOISPProviderName value=&pname;>
-				<input type=checkbox name=BYOISPSelected value=true checked=&byoisp; selected><font size=-1>
-			<td>&nbsp;
-			<td valign=top align=left>
-				<input type=hidden name=BYOISPSelected value=''></font>
+<tr><td absheight=45 valign=top colspan=3>
+	<table><tr><td valign=top>
+			<input type=hidden name=BYOISPProviderName value=&pname;>
+			<input type=checkbox name=BYOISPSelected value=true checked=&byoisp; selected>
+		<td><font size=-1>&nbsp;
+		<td valign=top align=left><input type=hidden name=BYOISPSelected value=''></font>
 	</table>
 <tr>
-<td absheight=38 valign=middle colspan=3>
-	<table>
-		<tr>
-			<td valign=top align=left>
-				<input type=text name=BYOISPLoginName bgcolor=#444444 text=#ffdd33 cursor=#cc9933 size=18 maxlength=18 value='&lname;'>	<tr>
-	</table>
-
-<tr>
-<td absheight=38 valign=middle colspan=3>
-	<table>
-		<tr>
-			<td valign=top align=left>
-				<input type=password name=BYOISPPassword bgcolor=#444444 text=#ffdd33 cursor=#cc9933 size=18 maxlength=18 value='&bpass;'>	<tr>
-	</table>
-
-<tr>
-<td absheight=38 valign=top colspan=3>
-	<table>
-		<tr>
-			<td valign=top align=left>
-				<input type=text name=BYOISPAccessNumber bgcolor=#444444 text=#ffdd33 cursor=#cc9933 size=18 maxlength=18 numbers value='&banum;'>	<tr>
-	</table>
-<tr>
-<td absheight=38 valign=top colspan=3>
-	<table>
-		<tr>
-			<td valign=top align=left>
-				<input type=text name=BYOISPAccessNumber2 bgcolor=#444444 text=#ffdd33 cursor=#cc9933 size=18 maxlength=18 numbers value='&banm2;'>	<tr>
-	</table>
-
+<td absheight=38 valign=middle colspan=3><table><tr><td valign=top align=left><input type=text name=BYOISPLoginName bgcolor=#444444 text=#ffdd33 cursor=#cc9933 size=18 maxlength=18 value='&lname;'><tr></table><tr>
+<td absheight=38 valign=middle colspan=3><table><tr><td valign=top align=left><input type=password name=BYOISPPassword bgcolor=#444444 text=#ffdd33 cursor=#cc9933 size=18 maxlength=18 value='&bpass;'><tr></table><tr>
+<td absheight=38 valign=top colspan=3><table><tr><td valign=top align=left><input type=text name=BYOISPAccessNumber bgcolor=#444444 text=#ffdd33 cursor=#cc9933 size=18 maxlength=18 numbers value='&banum;'><tr></table><tr>
+<td absheight=38 valign=top colspan=3><table><tr><td valign=top align=left><input type=text name=BYOISPAccessNumber2 bgcolor=#444444 text=#ffdd33 cursor=#cc9933 size=18 maxlength=18 numbers value='&banm2;'><tr></table>
 </table>
-<tr>
-<td>
-<td colspan=4 height=47 valign=top align=left>
-<tr>
-<td colspan=4 valign=top align=right>
-<script>butt(th, 'Done', 'Done', 103);</script>
+<tr><td><td colspan=4 height=47 valign=top align=left>
+<tr><td colspan=4 valign=top align=right><script>butt(th,'Done','Done',103);</script>
 </form>
-<td>
