update head() function

--- a/src/level0-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp();
-head(th, 'medium', '', '', 'Advanced dialing options');
+head(th, 'Advanced dialing options');
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
