--- a/src/level0-romfs/ROM/HTMLs/ConnectSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/ConnectSetup.html
@@ -7,7 +7,7 @@
 </head>
 <script>
 th = pp()
-head(th, 'medium', 'karTV', 5, 'Connect Setup v2.6');
+head(th, 'Connect Setup v2.6', '', 'karTV', 5);
 window.onload = uS;
 </script>
 <spacer H=24 type=block>
