--- a/src/level0-romfs/ROM/HTMLs/ErrorInBYOISP.html
+++ b/src/level0-romfs/ROM/HTMLs/ErrorInBYOISP.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp();
-head(th, "medium", '', '', "Error Setting ISP Options");
+head(th, 'Error Setting ISP Options');
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
