--- a/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
+++ b/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
@@ -6,10 +6,10 @@
 <script>	
 th = pp()
 
-txt = "Preparing";
+txt = 'Preparing';
 r=Math.floor(Math.random() * 20)
-if (r == 15){txt = "Farting out"}
-head(th, "medium", 'loop2', -1, txt+' your update', true);
+if (r == 15){txt = 'Farting out'}
+head(th, txt+' your update', '', 'loop2', -1, true);
 </script>
 <table cellspacing=0 cellpadding=0>
 	<tr>
