--- a/src/level0-romfs/ROM/HTMLs/Phone56k.html
+++ b/src/level0-romfs/ROM/HTMLs/Phone56k.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp()
-head(th, "medium", '', '', 'Use the V.90 option');
+head(th, 'Use the V.90 option');
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
