--- a/src/level0-romfs/ROM/HTMLs/PhoneCallWaitThresh.html
+++ b/src/level0-romfs/ROM/HTMLs/PhoneCallWaitThresh.html
@@ -6,7 +6,7 @@
 </head>
 <script>	
 th = pp()
-head(th, medium, '', '', 'Call waiting sensitivity')
+head(th, 'Call waiting sensitivity')
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
