--- a/src/level0-romfs/ROM/HTMLs/PhoneCallWaiting.html
+++ b/src/level0-romfs/ROM/HTMLs/PhoneCallWaiting.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp()
-head(th, 'medium', '', '', 'Call waiting options')
+head(th, 'Call waiting options')
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
