--- a/src/level0-romfs/ROM/HTMLs/PhoneSetupIntro.html
+++ b/src/level0-romfs/ROM/HTMLs/PhoneSetupIntro.html
@@ -12,7 +12,7 @@ if (ref == 'file://rom/HTMLs/Themes.html' || ref == 'file://rom/HTMLs/PhoneCallW
 </head>
 <script>
 th = pp()
-head(th, 'large', 'Ghosttown', '', 'Phone & Dialing Settings')
+head(th, 'Phone & Dialing Settings', 'large', 'Ghosttown')
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
