--- a/src/level0-romfs/ROM/HTMLs/SSIDInfo.html
+++ b/src/level0-romfs/ROM/HTMLs/SSIDInfo.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp()
-head(th, "medium", '', '', "WebTV SSID");
+head(th, 'WebTV SSID');
 </script>
 <table cellspacing=0 cellpadding=0 width="99%">
 <tr>
