--- a/src/level0-romfs/ROM/HTMLs/TechInfoInternal.html
+++ b/src/level0-romfs/ROM/HTMLs/TechInfoInternal.html
@@ -7,7 +7,7 @@
 </head>
 <script>
 th = pp()
-head(th, 'medium', 'tymplingA', '', 'WebTV Technical Information')
+head(th, 'WebTV Technical Information', '', 'tymplingA')
 </script>
 <table width=100%>
 <tr>
