--- a/src/level0-romfs/ROM/HTMLs/Themes.html
+++ b/src/level0-romfs/ROM/HTMLs/Themes.html
@@ -7,7 +7,7 @@
 	function sBG(c){sB(z_nv,0,c)}
 </script>
 </head>
-<script>head(th,'large','world1',5,'Theme Settings');</script>
+<script>head(th,'Theme Settings','large','world1',5);</script>
 	<spacer Width=30 Height=6 type=vertical>
 	<table cellspacing=0 cellpadding=0>
 		<tr>
