--- a/src/level0-romfs/ROM/HTMLs/AccessNumber.html
+++ b/src/level0-romfs/ROM/HTMLs/AccessNumber.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp();
-head(th, 'medium', '', '', 'Dialing access number')
+head(th, 'Dialing access number')
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
