--- a/src/level0-romfs/ROM/HTMLs/BGM.html
+++ b/src/level0-romfs/ROM/HTMLs/BGM.html
@@ -18,7 +18,7 @@
 	window.onload = doLoad;
 </script>
 </head>
-<script>head(th, 'large', bgm, -1, 'Background Music Settings');</script>
+<script>head(th, 'Background Music Settings', 'large', bgm, -1);</script>
   <spacer Width=30 Height=6 type=vertical>
   <table cellspacing=0 cellpadding=0>
     <tr>
