--- a/src/level0-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/level0-romfs/ROM/HTMLs/BuildInfo.html
@@ -7,7 +7,7 @@
 </head>
 <script>
 th = pp()
-head(th,'medium','FridayEvilArr',5,'About this HackTV build');
+head(th,'About this HackTV build','','FridayEvilArr',5);
 </script>
 
 <table>
