--- a/src/level0-romfs/ROM/HTMLs/PhoneReset.html
+++ b/src/level0-romfs/ROM/HTMLs/PhoneReset.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp()
-head(th, 'medium', '', '', 'Reset dialing options')
+head(th, 'Reset dialing options')
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
