update head() function

--- a/src/tmp-romfs/ROM/HTMLs/BGM.html
+++ b/src/tmp-romfs/ROM/HTMLs/BGM.html
@@ -17,7 +17,7 @@
 	window.onload = doLoad;
 </script>
 </head>
-<script>head(th, 'large', z_bgm[bgm], -1, 'Background Music Settings');</script>
+<script>head(th, 'Background Music Settings', 'large', bgm, -1);</script>
   <spacer Width=30 Height=6 type=vertical>
   <table cellspacing=0 cellpadding=0>
     <tr>
