--- a/src/tmp-romfs/ROM/HTMLs/ConnectSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/ConnectSetup.html
@@ -7,8 +7,8 @@
 </head>
 <form name="t"><input type="hidden" name="h" value="&pname;"></form>
 <script>
-th = getTheme(document.t.h.value);
-head(th, 'medium', 'karTV', 5, 'Connect Setup v2.6');
+th = pp()
+head(th, 'Connect Setup v2.6', '', 'karTV', 5);
 window.onload = uS;
 </script>
 <spacer H=24 type=block>
