--- a/src/tmp-romfs/ROM/HTMLs/BYOISPIntro.html
+++ b/src/tmp-romfs/ROM/HTMLs/BYOISPIntro.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp();
-head(th, 'medium', '', '', 'Using your own ISP');
+head(th, 'Using your own ISP');
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
