--- a/src/tmp-romfs/ROM/HTMLs/ConfigureBYOISP.html
+++ b/src/tmp-romfs/ROM/HTMLs/ConfigureBYOISP.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp();
-head(th, 'medium', 'seqJ', '', 'Use your own ISP');
+head(th, 'Use your own ISP', '', 'snowy1');
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
