--- a/src/tmp-romfs/ROM/HTMLs/NVRAM.html
+++ b/src/tmp-romfs/ROM/HTMLs/NVRAM.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp();
-head(th, 'medium', '', '', 'NVRAM Test Page');
+head(th, 'NVRAM Test Page');
 </script>
 <h1>NVRAM Test:</h1>
 <table border=1>
