--- a/src/tmp-romfs/ROM/HTMLs/PhoneSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneSetup.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp();
-head(th, 'medium', '', '', 'Dialing options');
+head(th, 'Dialing options');
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
