--- a/src/tmp-romfs/ROM/HTMLs/SecretPhoneSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/SecretPhoneSetup.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 th = pp()
-head(th, 'medium', 'AliveAtDawn', '', 'Obscure dialing options')
+head(th, 'Obscure dialing options', '', 'AliveAtDawn')
 </script>
 <table cellspacing=0 cellpadding=0>
 <tr>
