move nvram and header to n.js and h.js

--- a/src/level0-romfs/ROM/HTMLs/BGM.html
+++ b/src/level0-romfs/ROM/HTMLs/BGM.html
@@ -1,8 +1,7 @@
 <html>
   <head>
     <display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
 <script>	
 	th = pp()
 	bgm = gBGM(z_nv,'')
