--- a/src/level0-romfs/ROM/HTMLs/PhoneSetupIntro.html
+++ b/src/level0-romfs/ROM/HTMLs/PhoneSetupIntro.html
@@ -1,8 +1,7 @@
 <html>
 <head>
 <display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
 <script>
 ref = history.previous
 if (ref == 'file://rom/HTMLs/Themes.html' || ref == 'file://rom/HTMLs/PhoneCallWaitThresh.html' || ref == 'file://rom/HTMLs/BGM.html' || ref == 'file://rom/HTMLs/NVRAM.html') {
