--- a/src/level0-romfs/ROM/HTMLs/Themes.html
+++ b/src/level0-romfs/ROM/HTMLs/Themes.html
@@ -1,7 +1,6 @@
 <html><head>
 <display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
 <script>	
 	th=pp()
 	function sBG(c){sB(z_nv,0,c)}
